--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title style="text-align:center;">Birdwatching</title>
+        <title>Birdwatching</title>
         <link
             href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700"
             rel="stylesheet"
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <h1>Birdwatching</h1>
+        <h1 style="text-align:center;">Birdwatching</h1>
         <img src="images/dove.png" alt="a simple dove logo" />
 
         <ul>
