--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 
     <body>
         <h1 style="text-align:center;">Birdwatching</h1>
-        <img src="images/dove.png" alt="a simple dove logo" />
-
-        <ul>
-            <li><span>Home</span></li>
-            <li><a href="#">Get started</a></li>
-            <li><a href="#">Photos</a></li>
-            <li><a href="#">Gear</a></li>
-            <li><a href="#">Forum</a></li>
-        </ul>
+        <img src="images/dove.png" alt="a simple dove logo" width="70" height="70" style="float:right" />
+<table style="width: 100%">
+        <tr>
+         <th><span>Home</span></th>
+         <th><a href="#">Get started</a></th>
+         <th><a href="#">Photos</a></th>
+         <th><a href="#">Gear</a></th>
+         <th><a href="#">Forum</a></th>
+    </tr>
+</table>
 
         <h2>Welcome</h2>
 
