capitalizing the header and navigation headers

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     </head>
 
     <body>
-        <h1 style="text-align:center;">Birdwatching</h1>
+        <h1 style="text-align:center;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">BIRDWATCHING</h1>
         <img src="images/dove.png" alt="a simple dove logo" width="70" height="70" style="float:right" />
 <table style="width: 100%">
         <tr>
-         <th><span>Home</span></th>
-         <th><a href="#">Get started</a></th>
-         <th><a href="#">Photos</a></th>
-         <th><a href="#">Gear</a></th>
-         <th><a href="#">Forum</a></th>
+         <th><span>HOME</span></th>
+         <th><a href="#">GET STARTED</a></th>
+         <th><a href="#">PHOTOS</a></th>
+         <th><a href="#">GEAR</a></th>
+         <th><a href="#">FORUM</a></th>
     </tr>
 </table>
 
