--- a/index.html
+++ b/index.html
@@ -8,21 +8,26 @@
             href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="style.css"/>
     </head>
 
     <body>
-        <h1 style="text-align:center;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">BIRDWATCHING</h1>
-        <img src="images/dove.png" alt="a simple dove logo" width="70" height="70" style="float:right" />
-<table style="width: 100%">
-        <tr>
-         <th><span>HOME</span></th>
-         <th><a href="#">GET STARTED</a></th>
-         <th><a href="#">PHOTOS</a></th>
-         <th><a href="#">GEAR</a></th>
-         <th><a href="#">FORUM</a></th>
-    </tr>
-</table>
 
+        <header>
+        <h1>BIRDWATCHING</h1>
+        <img src="images/dove.png" alt="a simple dove logo"/>
+    <nav>
+            <ul>
+                <li><span>HOME</span></li>
+                <li><a href="#">GET STARTED</a></li>
+                <li><a href="#">PHOTOS</a></li>
+                <li><a href="#">GEAR</a></li>
+                <li><a href="#">FORUM</a></li>
+            </ul>
+    </nav>
+        </header>
+        <main>
+        <article>
         <h2>Welcome</h2>
 
         <p>
@@ -37,7 +42,8 @@
             So don't waste time! Get what you need, then turn off that computer
             and get out into the great outdoors!
         </p>
-
+        </article>
+        <aside>
         <h2>Favorite photos</h2>
 
         <a href="images/favorite-1.jpg">
@@ -64,6 +70,9 @@
                 alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"
             />
         </a>
+        </aside>
+        </main>
+        <footer>
 
         <p>
             This fake website example is CC0 — any part of this code may be
@@ -77,5 +86,6 @@
             </a>
             by Lorc.
         </p>
+        </footer>
     </body>
 </html>
